--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 	<title>Sasmita Behera</title>
-	<meta name="description" content="">
-	<meta name="keywords" content="">
+	<meta name="description" content="Sasmita Behera">
+	<meta name="keywords" content="Sasmita Behera Portfolio Risk Management Data Analysis">
 
 	<!-- Favicons -->
 	<link href="assets/img/favicon.png" rel="icon">
@@ -69,7 +69,7 @@
 				data-aos="fade-up" data-aos-delay="100">
 				<h2>I'm Sasmita Behera</h2>
 				<p><span class="typed"
-						data-typed-items="Business Systems Analyst, Over 5 years of Financial Risk Management Experience"></span>
+						data-typed-items="Business Systems Analyst, with 9 years of Industrial Experience"></span>
 				</p>
 			</div>
 
