--- a/index.html
+++ b/index.html
@@ -277,6 +277,19 @@
 								</li>
 							</ul>
 						</div><!-- End Resume Item -->
+
+						<div class="resume-item">
+							<h4>BSenior Sooftware Engineer </h4>
+							<h5>Nov 2010 - Apr 2014</h5>
+							<p><em>Infosys Limited</em></p>
+							<ul>
+								<li>Developed solutions for a banking client, ensuring smooth integration and adherence to financial regulations.</li>
+								<li>Led debugging and code reviews to improve system efficiency and ensure seamless user acceptance.</li>
+								<li>Managed requirements gathering and analysis, product backlog logging, and user experience document writing, 
+									ensuring comprehensive documentation of use cases to enhance understanding and implementation</li>
+								</li>
+							</ul>
+						</div><!-- End Resume Item -->
 		
 					</div>
 		
