--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 						</div><!-- End Resume Item -->
 
 						<div class="resume-item">
-							<h4>BSenior Sooftware Engineer </h4>
+							<h4>Senior Software Engineer </h4>
 							<h5>Nov 2010 - Apr 2014</h5>
 							<p><em>Infosys Limited</em></p>
 							<ul>
