--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 		
 						<div class="resume-item pb-0">
 							<h4>Sasmita Behera</h4>
-							<p><em>Innovative business analyst with 5+ years of Industrial experience in providing data driven
+							<p><em>Innovative business analyst with 9 years of Industrial experience in providing data driven
 									solutions for global clients in Fintech Industry.</em></p>
 							<ul>
 								<li>Mississauga, ON</li>
@@ -235,9 +235,9 @@
 					<div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
 						<h3 class="resume-title">Professional Experience</h3>
 						<div class="resume-item">
-							<h4>Business Systems Analyst Co-Op </h4>
+							<h4>Canadian Imperial Bank of Commerce (CIBC)</h4>
 							<h5>Sept 2024 - Present</h5>
-							<p><em>Canadian Imperial Bank of Commerce (CIBC) </em></p>
+							<p><em>Business Systems Analyst Co-Op</em></p>
 							<ul>
 								<li>Bridging business needs with IT solutions by analyzing processes, collecting
 									requirements, and implementing system enhancements.</li>
@@ -252,12 +252,13 @@
 						</div><!-- Edn Resume Item -->
 		
 						<div class="resume-item">
+							<h4>Amazon Development Centre</h4>
 							<h5>Mar 2018 - Aug 2023</h5>
-							<p><em>Amazon Development Centre</em></p>
+							<!--<p><em>Amazon Development Centre</em></p>-->
 		
 							<ul>
 								<li>
-									<h4>Risk Specialist</h4>
+									<p><em>Risk Specialist</em></p>
 									<ul>
 										<li>Specialized in analytical skills, ETL processes, risk management, Tableau, Asana and other Data Analytics tools for large datasets of Amazon accounts, focusing on buyer accounts’ fraud detection through RDBMS query language using SQL Server</li>
 										<li>Developed quantitative payments pipeline ML regulatory and compliance protocols and algorithms for financial analysis, planning and boost analytic capabilities of team to enhance platform security, using machine learning and statistical techniques</li>
@@ -267,7 +268,7 @@
 									</ul>
 								</li>
 								<li>
-									<h4>Transaction Risk Investigator</h4>
+									<p><em>Transaction Risk Investigator</em></p>
 									<ul>
 										<li>Demonstrated detail-oriented skills by conducting real time transaction risk investigation on behalf of a buyer organization.</li>
 										<li>Managed buyer accounts and legal security strategy analysis through carefully monitoring of orders transactions status and resolved finance disputes proactively through effective decision-making and critical thinking abilities.</li>
@@ -279,9 +280,9 @@
 						</div><!-- End Resume Item -->
 
 						<div class="resume-item">
-							<h4>Senior Software Engineer </h4>
+							<h4>Infosys Limited</h4>
 							<h5>Nov 2010 - Apr 2014</h5>
-							<p><em>Infosys Limited</em></p>
+							<p><em>Senior Software Engineer </em></p>
 							<ul>
 								<li>Developed solutions for a banking client, ensuring smooth integration and adherence to financial regulations.</li>
 								<li>Led debugging and code reviews to improve system efficiency and ensure seamless user acceptance.</li>
