--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 						<h3 class="resume-title">Sumary</h3>
 		
 						<div class="resume-item pb-0">
-							<h4>Sasmita Behera</h4>
+							<h4 style="color: black;">Sasmita Behera</h4>
 							<p><em>Innovative business analyst with 9 years of Industrial experience in providing data driven
 									solutions for global clients in Fintech Industry.</em></p>
 							<ul>
@@ -215,17 +215,17 @@
 		
 						<h3 class="resume-title">Education</h3>
 						<div class="resume-item">
-							<h4>Master of Applied Computing</h4>
+							<h4 style="color: black;">Master of Applied Computing</h4>
 							<h5>Sep, 2023 - Apr, 2025</h5>
-							<p><em>University of Windsor, Windsor, Ontario</em></p>
+							<p><em style="color: black;">University of Windsor, Windsor, Ontario</em></p>
 							<p>With Master of Applied Computing, I have gained advanced technical expertise, combining theoretical knowledge with practical skills to drive 
 								innovative solutions in the ever-evolving tech landscape.</p>
 						</div><!-- Edn Resume Item -->
 		
 						<div class="resume-item">
-							<h4>Post Graduate Diploma in Operations Management</h4>
+							<h4 style="color: black;">Post Graduate Diploma in Operations Management</h4>
 							<h5>2020 - 2021</h5>
-							<p><em>Institute of Management Technology</em></p>
+							<p><em style="color: black;">Institute of Management Technology</em></p>
 							<p>My Post Graduate Diploma in Operations Management has equipped me with a strong foundation in optimizing processes, improving efficiency, 
 								and driving operational excellence in dynamic business environments</p>
 						</div><!-- Edn Resume Item -->
@@ -235,9 +235,9 @@
 					<div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
 						<h3 class="resume-title">Professional Experience</h3>
 						<div class="resume-item">
-							<h4>Canadian Imperial Bank of Commerce (CIBC)</h4>
+							<h4 style="color: black;">Canadian Imperial Bank of Commerce (CIBC)</h4>
 							<h5>Sept 2024 - Present</h5>
-							<p><em>Business Systems Analyst Co-Op</em></p>
+							<p><em style="color: black;">Role: Business Systems Analyst Co-Op</em></p>
 							<ul>
 								<li>Bridging business needs with IT solutions by analyzing processes, collecting
 									requirements, and implementing system enhancements.</li>
@@ -252,13 +252,10 @@
 						</div><!-- Edn Resume Item -->
 		
 						<div class="resume-item">
-							<h4>Amazon Development Centre</h4>
+							<h4 style="color: black;">Amazon Development Centre</h4>
 							<h5>Mar 2018 - Aug 2023</h5>
-							<!--<p><em>Amazon Development Centre</em></p>-->
 		
-							<ul>
-								<li>
-									<p><em>Risk Specialist</em></p>
+							<p><em style="color: black;">Role: Risk Specialist</em></p>
 									<ul>
 										<li>Specialized in analytical skills, ETL processes, risk management, Tableau, Asana and other Data Analytics tools for large datasets of Amazon accounts, focusing on buyer accounts’ fraud detection through RDBMS query language using SQL Server</li>
 										<li>Developed quantitative payments pipeline ML regulatory and compliance protocols and algorithms for financial analysis, planning and boost analytic capabilities of team to enhance platform security, using machine learning and statistical techniques</li>
@@ -266,23 +263,12 @@
 										<li>Managed workforce operations for the team by strategically delegating reports, handling escalations and ad hoc tasks, ensuring efficient task distribution and timely resolution.</li>
 										<li>Exercised leadership in enhancing teamwork and efficiency, leveraging advanced data mining techniques to ensure a secure environment for Amazon's global consumer base aligned with company’s vision</li>
 									</ul>
-								</li>
-								<li>
-									<p><em>Transaction Risk Investigator</em></p>
-									<ul>
-										<li>Demonstrated detail-oriented skills by conducting real time transaction risk investigation on behalf of a buyer organization.</li>
-										<li>Managed buyer accounts and legal security strategy analysis through carefully monitoring of orders transactions status and resolved finance disputes proactively through effective decision-making and critical thinking abilities.</li>
-										<li>Handled to consumer inquiries and payment escalations about Amazon Pay accounts, ensuring a positive customer experience.</li>
-										<li>Employed strong organizational skills to monitor and analyze transaction statuses for resolving pricing concerns in a high-speed settingeffectively.</li>
-									</ul>
-								</li>
-							</ul>
 						</div><!-- End Resume Item -->
 
 						<div class="resume-item">
-							<h4>Infosys Limited</h4>
+							<h4 style="color: black;">Infosys Limited</h4>
 							<h5>Nov 2010 - Apr 2014</h5>
-							<p><em>Senior Software Engineer </em></p>
+							<p><em style="color: black;">Role: Senior Software Engineer </em></p>
 							<ul>
 								<li>Developed solutions for a banking client, ensuring smooth integration and adherence to financial regulations.</li>
 								<li>Led debugging and code reviews to improve system efficiency and ensure seamless user acceptance.</li>
